Delete unused image files and clean up code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="cancel">Cancel</string>
     <string name="enter_name">Nhập tên</string>
     <string name="my_list">My List</string>
+    <string name="i_want_to">I want to…</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
